[tool.poetry]
name = "udea_autmatization_rooms"
version = "0.1.0"
description = "Automatization of the loans of the lamtha spaces of work on the Udea page "
authors = ["Kichiro Nakamoto <santiago.ruizm40@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "*"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
